updated the syntax so it does not get confused by other numbers in the picture

--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="d-flex justify-content-center">
-        <div id="loading" class="spinner-border" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
+      <div id="loading" class="spinner-border" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
     </div>
     <div id="content">
-        <div class="imgcontainer">
-            <img id="uplimg" src="https://i.imgur.com/WVdfNQY.png" alt="">
-            <button id="btn" type="submit">Check</button>
-        </div>
-        <div class="imgcontainer">
-            <img id="uplimg2" src="https://i.imgur.com/O6GLZA7.jpg" alt="">
-            <button id="btn2" type="submit">Check</button>
-        </div>
-        <div class="imgcontainer">
-            <img id="uplimg3" src="https://i.imgur.com/Omky1qV.jpg" alt="">
-            <button id="btn3" type="submit">Check</button>
-        </div>
-        <div class="imgcontainer">
-            <img id="uplimg4" src="https://i.imgur.com/0Xklr0Y.jpg" alt="">
-            <button id="btn4" type="submit">Check</button>
-        </div>
+      <div class="imgcontainer">
+        <img id="uplimg" src="https://i.imgur.com/WVdfNQY.png" alt="" />
+        <button id="btn" type="submit">Check</button>
+      </div>
+      <div class="imgcontainer">
+        <img id="uplimg2" src="https://i.imgur.com/O6GLZA7.jpg" alt="" />
+        <button id="btn2" type="submit">Check</button>
+      </div>
+      <div class="imgcontainer">
+        <img id="uplimg3" src="https://i.imgur.com/Omky1qV.jpg" alt="" />
+        <button id="btn3" type="submit">Check</button>
+      </div>
+      <div class="imgcontainer">
+        <img id="uplimg4" src="https://i.imgur.com/9y5uEfQ.jpg" alt="" />
+        <button id="btn4" type="submit">Check</button>
+      </div>
     </div>
-    <script src='https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js'></script>
+    <script src="https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js"></script>
     <script src="./script.js"></script>
-</body>
-
+  </body>
 </html>
